fixed a design bug in board where tasks got cut off

--- a/board/board.css
+++ b/board/board.css
@@ -93,7 +93,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   word-wrap: break-word;
-  width: 220px;
+  width: 219px;
   height: 231px;
   padding: 15px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -148,7 +148,7 @@ h3 {
   border-radius: 8px;
   margin: 15px 0 5px 0;
   background-color: #f5f5f5;
-  border: 2px dashed transparent;
+ 
   transition: border-color 0.2s ease;
   -ms-overflow-style: none;
   scrollbar-width: none;
