--- a/media-querie.css
+++ b/media-querie.css
@@ -539,7 +539,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1208px) {
   .header-nav-logo {
     display: none;
   }
